--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
-          <<p>Logiciel Sage Comptabilité</p>
+          <p>Logiciel Sage Comptabilité</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
           </div>
           <p>Developpement de web</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+            
            </div>
           <br>
 
